# dev

./: .gitignore  README.md
boost/clt_srv/: CMakeLists.txt  clt_srv.cpp  go.sh
boost/csv/: CMakeLists.txt  go.sh  simple_example_2.cpp
boost/logging/: CMakeLists.txt  filtering.cpp  go.sh  logfile.cpp  logger.cpp  logger.h  trivial.cpp
boost/mem_leak/: CMakeLists.txt  mem_leak.cpp  no_leak.cpp
boost/shared_ptr/: CMakeLists.txt  payload.cxx  payload.h  shared_ptr_demo.cxx
boost/tcp_daytime/: CMakeLists.txt  async_server.cpp  client.cpp  go.sh  server.cpp
cmake-tut/: README.md
cmake-tut/coverage/: CMakeLists.txt  coverage.cpp  go.sh
cmake-tut/decompose/: CMakeLists.txt  decompose.cpp
cmake-tut/enumeration/: CMakeLists.txt  enumeration.cpp  go.sh
cmake-tut/gtest/: CMakeLists.txt  go.sh  main.cpp  main_test.cpp
cmake-tut/handle_csv/: CMakeLists.txt  go.sh  input.csv  loadcsv.cpp
cmake-tut/hello-world-example/: CMakeLists.txt  README.md  build_and_run.sh  check_defines.cpp  cli_param.cpp  default.profraw  gmon.out  go.sh  greeter.cpp  greeter.h  hello_world.cpp  make_debug.sh  profile_exec.sh
cmake-tut/llvm-cov/: foo.cc  go.sh
cmake-tut/logging/: CMakeLists.txt  README.md  advanced.cpp  demo.cpp  go.sh
cmake-tut/parsing/: Makefile  cal.l  cal.ypp
cmake-tut/text-analysis/: CMakeLists.txt  README.md  test_input.txt  text_analysis.cpp  word_frequency.cpp  word_frequency.h
cmake-tut/valgrind-example/: CMakeLists.txt  build_and_check.sh  memoryLeak.c  simpleOptions.c
gdb_test/: echotime.cxx
gtkmm/helloworld/: CMakeLists.txt  build.sh  main.cc
http-requests/: logged_request.py  verbose_request.py  verbose_session.py
libcurl/: CMakeLists.txt  google_post.cxx
ncurses/: CMakeLists.txt  demo.cc
ncurses/eierhund/: EierHund.py  EierHundQt6.py
poc/: agile_testing.py  hello.py
poco/: CMakeLists.txt  active.cc  go.sh  httptime.cc  thread.cc
postgresql/: CMakeLists.txt  populate.sql  simple.cxx  stream_from.cxx  threads.cxx  work.cxx  work.h
profiling/: deepthought.cxx  deepthought.h  profiling.cxx
py/: check_em.py  move_em.py
py/afb_eos_crawler/: afb_eos_crawler.py  controller.py  database.py  models.py  requirements.txt  scraper.py  views.py
py/crawl/: README.md  controller.py  database.py  eos_buyzoxs_crawler.py  models.py  scraper.py  views.py
pyexcel/: demo.py  pyexcel.xlsx
qt/: CMakeLists.txt  go.sh  wordcount.cpp
qt/AsyncQTcpServer/: CMakeLists.txt  main.cpp  myclient.cpp  myclient.h  myserver.cpp  myserver.h  mytask.cpp
qt/ClientSocketComm/: CMakeLists.txt  client.cpp  client.h  context.cpp  context.h  getopt.cpp  getopt.h  go.sh  main.cpp
qt/ClientSocketComm/resources/: telegrams.txt
qt/HttpDownload/: CMakeLists.txt  httpdownload.cpp  httpdownload.h  httpdownload.ui  main.cpp
qt/LoginDialog/: CMakeLists.txt  credentials.h  login_dialog.cpp  login_dialog.h  main.cpp
qt/LoopBackExample/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  go.sh  main.cpp
qt/NetworkDownloadExample/: CMakeLists.txt  downloadmanager.cpp  downloadmanager.h  main.cpp
qt/Qt6CustomWindowExample/: CMakeLists.txt  customwindow.cpp  customwindow.cpp.bak  customwindow.h  customwindow.h.bak  main.cpp  main.cpp.bak
qt/TableWidget/: TableWidget.pro  main.cpp  tablewidget.cpp  tablewidget.h  tablewidget.ui
qt/books/: CMakeLists.txt  go.sh
qt/chatty/: CMakeLists.txt  client.cpp  client_window.cpp  client_window.h  client_window.ui  go.sh  server.cpp  server_window.cpp  server_window.h  server_window.ui
qt/client_server/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  go.sh  main.cpp
qt/mandelbrot/: CMakeLists.txt  go.sh
qt/multilang/: hellotr.pro  hellotr_la.ts  main.cpp  redo.sh
qt/netcatgui/: CMakeLists.txt  go.sh
qt/netcatgui/widgets/: ncsessionlistenwidget.cpp  ncsessionwidget.ui
qt/producer-consumer/: CMakeLists.txt  consumer.cpp  producer.cpp
qt/pyqtsort/: base_sorter.py  qtsort.py  visualizer_widget.py
qt/pyqtsort/sorters/: bubble_sort.py  cocktail_sort.py  comb_sort.py  gnome_sort.py  heap_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  radix_sort.py  selection_sort.py  shell_sort.py
qt/pytcp/: client.py  server.py
qt/signal_slot/: CMakeLists.txt  basic_thread.cpp  controller.cpp  controller.h  example.cpp  example.h  go.sh  mythread.cpp  mythread.h  worker.cpp  worker.h
qt/simple-gui/: CMakeLists.txt  build_and_run.sh  main.cpp  widget.cpp  widget.h  widget.ui
qt/simple_socket/: CMakeLists.txt  main.cpp  mytcpsocket.cpp  mytcpsocket.h
qt/socket_signal_slots/: CMakeLists.txt  main.cpp  mytcpsocket.cpp  mytcpsocket.h
soap/calc/: calc.c  calc.h  go.sh
soap/hello/: go.sh  hello.cpp  hello.h  myapp.cpp
std-threads/: CMakeLists.txt  std-threads.cpp
std-threads/client-server/: CMakeLists.txt  client.cpp  server.cpp
vscode/cmakeQuickStart/: CMakeLists.txt  main.cpp
vstudio/hello/: CMakeLists.txt  hello.cc  hello.sln  hello.vcxproj  hello.vcxproj.filters
vstudio/hello/CMakeHello/: CMakeHello.cpp  CMakeHello.h  CMakeLists.txt
wrapping/bonjour/: Bonjour.cpp  Bonjour.hpp  CMakeLists.txt  bonjour.py  go.sh  pylib.cpp
wrapping/boost_wrapping/: CMakeLists.txt  go.sh  libcallme.cpp  try.py
wrapping/ctypes_wrapping/: ntohl.py
wrapping/swig_example/: CMakeLists.txt  example.c  example.h  example.i  go.sh  try.py
